# sur-render

./: .flake8  .gitignore  Constants.py  GUIPanel.py  MainWindow.py  README.md  Scene.py  Shapes.py  SurRender.py  Viewport.py  ViewportWidget.py  __init__.py  benchmark_render.py  pyproject.toml  qrc_resources.py  test.py
Menus/: AddObject.py  Movement.py  ObjectList.py  Zoom.py
SurRender/: clipping.py  constants.py  main_window.py  math_transforms.py  parametric_curves.py  projection.py  scene.py  shapes.py  utils.py  vector.py  view.py  viewport.py  viewport_widget.py
SurRender/io/: obj_descriptor.py  obj_writer.py
SurRender/menus/: add_object.py  modify_object.py  modify_view.py  movement.py  object_list.py  tools_menu.py  zoom.py
SurRender/shapes/: __init__.py  generic_curve.py  generic_shape.py  line.py  object_3d.py  point.py  polygon.py
SurRender/tools/: __init__.py  camera_pan_tool.py  hand_tool.py  tool.py  zoom_tool.py
src/: Constants.py  MainWindow.py  Scene.py  Shapes.py  Viewport.py  ViewportWidget.py  math_transforms.py  primitives.py  resources.qrc
src/menus/: AddObject.py  Movement.py  ObjectList.py  Zoom.py
surrender/: __main__.py  _clipping.py  breeze_resources.py  clipping.py  constants.py  main_window.py  math_transforms.py  parametric_curves.py  projection.py  scene.py  segment.py  utils.py  vector.py  view.py  viewport.py  viewport_widget.py
surrender/clipping/: __init__.py  cohen_sutherland.py  liang_barsky.py  sutherland_hodgeman.py
surrender/io/: obj_io.py  (+3 more)
test/: test_clipping.py  test_cohen_sutherland.py  test_liang_barsky.py
(+26 files in other folders)
