[tool.poetry]
name = "surrender"
version = "0.1.0"
description = ""
authors = ["André Fernandes <fpf.andre@gmail.com>", "Shalom"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.6"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
